# Rubiks-Cube-Solver

./: .gitignore  CMakeLists.txt  ProjectNotes.md  readme.md
src/: main.cpp
src/PatternDatabase/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
src/cube/: Cube.cpp  Cube.h  RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube1dArray.h  RubiksCube3dArray.cpp  RubiksCube3dArray.h  RubiksCubeBitboard.cpp  RubiksCubeBitboard.h
src/solver/: BFSSolver.h  DFSSolver.h  IDAStarSolver.h  IDDFSSolver.h
